# ros2-robot-ws

./: .gitignore  readme.md
doc/: gz-ros.md  lawn-mower-tiles.md  object-detection.md  tiles-todo.md
src/my_opencv_demo/: package.xml
src/my_opencv_demo/src/: minimal_opencv_ros2_node.cpp
src/my_robot_bringup/: CMakeLists.txt  package.xml
src/my_robot_bringup/launch/: bringup.launch.py  robot_state_publisher.launch.py  spawn_robot.launch.py
src/my_robot_bringup/rviz/: robot_view.rviz
src/my_robot_bringup/scenarios/: README.md  lawn_with_walls.txt  maze.txt  simple_grid.txt
src/my_robot_bringup/scripts/: twist_stamper.py
src/my_robot_bringup/src/: tile_manager.cpp
src/my_robot_bringup/worlds/: lawn.sdf
src/my_robot_description/: CMakeLists.txt  package.xml
src/my_robot_description/config/: my_robot_controllers.yaml
src/my_robot_description/launch/: display_robot.launch.py
src/my_robot_description/models/brick_wall/: model.config  model.sdf
src/my_robot_description/models/tile/: model.config  model.sdf
src/my_robot_description/rviz/: my_robot.rviz
src/my_robot_description/urdf/: my_robot.urdf  my_robot.urdf.xacro
src/my_robot_object_detection/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
src/my_robot_object_detection/config/: object_detection_params.yaml
src/my_robot_object_detection/launch/: full_system.launch.py  object_detection.launch.py
src/my_robot_object_detection/my_robot_object_detection/: object_detector.py  object_follower.py
src/my_robot_object_detection/src/: object_detector.cpp  object_follower.cpp
src/opencv_frame_demo/: CMakeLists.txt  package.xml
src/opencv_frame_demo/src/: frame_node.cpp
src/robot_xl_pkg/: package.xml  setup.cfg  setup.py
src/robot_xl_pkg/config/: diff_drive_controller.yaml  individual_velocity_controllers.yaml
src/robot_xl_pkg/launch/: launch_sim.py
