cmake_minimum_required(VERSION 3.8)
project(my_robot_bringup)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# find dependencies
find_package(ament_cmake REQUIRED)
find_package(rclcpp REQUIRED)
find_package(gazebo_msgs REQUIRED)
find_package(nav_msgs REQUIRED)
find_package(geometry_msgs REQUIRED)
find_package(ament_index_cpp REQUIRED)

if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  # the following line skips the linter which checks for copyrights
  # comment the line when a copyright and license is added to all source files
  set(ament_cmake_copyright_FOUND TRUE)
  # the following line skips cpplint (only works in a git repo)
  # comment the line when this package is in a git repo and when
  # a copyright and license is added to all source files
  set(ament_cmake_cpplint_FOUND TRUE)
  ament_lint_auto_find_test_dependencies()
endif()

# Add tile_manager executable
add_executable(tile_manager src/tile_manager.cpp)
ament_target_dependencies(tile_manager
  rclcpp
  gazebo_msgs
  nav_msgs
  geometry_msgs
  ament_index_cpp
)

install(
  DIRECTORY launch worlds rviz scenarios
  DESTINATION share/${PROJECT_NAME}
)

install(
  PROGRAMS scripts/twist_stamper.py
  DESTINATION lib/${PROJECT_NAME}
)

install(
  TARGETS tile_manager
  DESTINATION lib/${PROJECT_NAME}
)

ament_package()
